--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<!-- <link rel="manifest" crossorigin="use-credentials" href="manifest.json" /> -->
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -39,5 +40,29 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+		<script>
+			if ("serviceWorker" in navigator) {
+				window.addEventListener("load", function () {
+					navigator.serviceWorker
+						.register("service-worker.js")
+						.then(
+							function (registration) {
+								console.log(
+									"Worker registration successful",
+									registration.scope
+								);
+							},
+							function (err) {
+								console.log("Worker registration failed", err);
+							}
+						)
+						.catch(function (err) {
+							console.log(err);
+						});
+				});
+			} else {
+				console.log("Service Worker is not supported by browser.");
+			}
+		</script>
 	</body>
 </html>
